# WebVOWL-Rust

./: .gitignore  Dockerfile  Gruntfile.js  README.md  config.js  dev.txt  docker-compose.yml  license.txt  package.json  pom.xml  webpack.config.js
.github/workflows/: docker-publish.yml
src/app/js/menu/: exportMenu.js
src/data/: modified.json
src/main/WEB-INF/: web.xml
src/main/rust/: Cargo.toml  LICENSE  README.md
src/main/rust/.cargo/: config.toml
src/main/rust/src/: graph.rs  lib.rs  main.rs  utils.rs  web.rs
src/main/rust/src/graph/: build.rs  data.rs  print.rs
src/main/rust/src/io/: files.rs
src/main/rust/src/parser/: owl.rs
src/main/webapp/: index.html
src/main/webapp/frontend/css/: toolstyle.css
src/main/webapp/frontend/js/: test.js
src/main/webapp/test/: test.js
src/test/frontend/: karma.conf.js
src/test/frontend/unit/: index.js
src/test/frontend/unit/modules/: datatypeFilterTest.js  objectPropertyFilterTest.js  subclassFilterTest.js
src/test/frontend/unit/util/: textToolsTest.js
src/util/VowlCssToD3RuleConverter/: code.js
src/webvowl/js/: graph.js  parser.js
src/webvowl/js/elements/links/: PlainLink.js
src/webvowl/js/parsing/: linkCreator.js
