[package]
name = "vowlgrapher"
version = "0.0.1"
edition = "2024"
license = "MIT"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
# Execute very expensive optimization passes to further optimize the wasm binary
wasm-opt = ['-O4']

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3"
# For all features, see: https://docs.rs/web-sys/latest/web_sys/#modules
features = ["Node", "Document", "Element", "HtmlElement", "Window"]

[dependencies]
# Web dev
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Graphs
grapher = "0.2.2"
petgraph = "0.6.5"
petgraph-gen = "0.1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Misc
glam = "0.29.0"
glium = "0.33"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
winit = { version = "0.28.7" }
