[package]
name = "vowlgrapher"
version = "0.0.1"
edition = "2024"
authors = ["Kneckerino", "KristianEmilWN", "nikarnik", "TheRealMorgenfrue"]
repository = "https://github.com/WebVOWL/WebVOWL"
license-file = "LICENSE"
readme = "README.md"
description = "WebVOWL backend"
keywords = ["graph", "vowl", "ontology", "force-directed-graph"]

[lib]
crate-type = ["cdylib"] #, "rlib"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
# Execute very expensive optimization passes to further optimize the wasm binary
wasm-opt = ['-O4']

[features]
feature = ["console_error_panic_hook"]

[dependencies]
rayon = "1.8"
grapher = { version = ">=0.2.3", git = "https://github.com/WebVOWL/RustGrapher.git" }
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rand = "0.8.5"
glam = "0.29.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# winit = { version = "0.28.7" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.2"


# For all features, see: https://docs.rs/web-sys/latest/web_sys/#modules
web-sys = { version = "0.3", features = [
    "Node",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
] }

# console_log = "1.0"
# egui_wgpu_backend = { version = "0.25", features = ["web"] }
# egui_winit_platform = { version = "0.19", features = ["webbrowser"] }

# wasm-bindgen-futures = "0.4"
# wasm-cookies = "0.2"
# wasm_thread = { version = "0.2", features = ["es_modules"] }
# wgpu = { version = "0.17", features = ["webgl"] }
