[package]
name = "webvowl"
version = "0.0.1"
edition = "2024"
authors = ["Kneckerino", "KristianEmilWN", "nikarnik", "TheRealMorgenfrue"]
repository = "https://github.com/WebVOWL/WebVOWL"
license-file = "LICENSE"
readme = "README.md"
description = "The Rust implementation of WebVOWL"
keywords = ["graph", "vowl", "ontology", "force-directed-graph"]

[lib]
name = "webvowl_lib"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
# Execute very expensive optimization passes to further optimize the wasm binary
wasm-opt = ['-O4']

[dependencies]
rayon = "1.10"
grapher = { version = ">=0.2.3", git = "https://github.com/WebVOWL/RustGrapher.git" }
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
horned-owl = { version = "1.0.0", default-features = false }
glam = "0.29.0"
console_error_panic_hook = { version = "0.1.7" }                                      #, optional = true }
getrandom = { version = "0.2", features = ["js"] }
# futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { version = "1.3" } #, optional = true }
wasm-bindgen-futures = "0.4"

[dependencies.tokio]
version = "1.43"
# https://docs.rs/tokio/latest/tokio/index.html#feature-flags
features = ["rt", "time"]

[dependencies.web-sys]
version = "0.3"
# https://docs.rs/web-sys/latest/web_sys/#modules
features = [
    "Node",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "console",
    "File",
    "Blob",
]

# console_log = "1.0"
# egui_wgpu_backend = { version = "0.25", features = ["web"] }
# egui_winit_platform = { version = "0.19", features = ["webbrowser"] }
# # winit = { version = "0.28.7" }
# wasm-cookies = "0.2"
# wgpu = { version = "0.17", features = ["webgl"] }
# [features]
# parallel = ["wasm-bindgen-rayon"]
